# krein

./: .gitattributes  .gitignore  Cargo.toml  README.md  test_complex.rs  test_nalgebra.rs
.github/workflows/: deploy.yml
scripts/: generate_csv.js
src/: ftnilo.wgsl  lib.rs
web/: index.html  package-lock.json  package.json  update_app.py  vite.config.ts
web/src/: App.tsx  index.css
web/src/wasm/: README.md  krein.d.ts  krein.js  krein_bg.wasm  krein_bg.wasm.d.ts  package.json
