[package]
name = "krein"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
num-bigint = "0.4"
num-traits = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
futures-channel = "0.3"
js-sys = "0.3"
num-integer = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
nalgebra = "0.35.0"
num-complex = "0.4.6"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
